--- a/Aequitas-hotstuff/libhotstuff/examples/CMakeLists.txt
+++ b/Aequitas-hotstuff/libhotstuff/examples/CMakeLists.txt
@@ -17,6 +17,8 @@
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
+add_executable(speedbump speedbump.cpp)
+target_link_libraries(speedbump hotstuff_static)
 
 add_executable(hotstuff-app hotstuff_app.cpp)
 target_link_libraries(hotstuff-app hotstuff_static)
