--- a/Aequitas-hotstuff/libhotstuff/CMakeLists.txt
+++ b/Aequitas-hotstuff/libhotstuff/CMakeLists.txt
@@ -74,9 +74,9 @@ if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
 endif()
 
 option(HOTSTUFF_DEBUG_LOG "enable debug log" OFF)
-option(HOTSTUFF_NORMAL_LOG "enable normal log" ON)
+option(HOTSTUFF_NORMAL_LOG "enable normal log" OFF)
 option(HOTSTUFF_PROTO_LOG "enable protocol log" OFF)
-option(HOTSTUFF_MSG_STAT "eanble message statistics" ON)
+option(HOTSTUFF_MSG_STAT "eanble message statistics" OFF)
 option(HOTSTUFF_BLK_PROFILE "enable block profiling" OFF)
 option(HOTSTUFF_TWO_STEP "use two-step HotStuff (instead of three-step HS)" OFF)
 option(BUILD_EXAMPLES "build examples" ON)
